Bug 71306 - Printing from Basic IDE is broken
Summary: Printing from Basic IDE is broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: Other All
: high major
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0 target:4.1.4
Keywords:
: 68522 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-06 14:40 UTC by philippe.schmidlin
Modified: 2013-11-13 12:18 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Attached copy screen (Print dialog box) (49.45 KB, image/png)
2013-11-06 14:59 UTC, philippe.schmidlin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description philippe.schmidlin 2013-11-06 14:40:56 UTC
Since Libre Office version 4.1.3.2 rc, printing macros basic does not selected the right module or selected area.
Not possible print !
With Libre Office Version 4.0.5.2 rc, the page number is not printed on top.
Only 'Page' appears.

OS : Windows 8.1

thank you to correct.
Comment 1 philippe.schmidlin 2013-11-06 14:59:02 UTC
Created attachment 88763 [details]
Attached copy screen (Print dialog box)
Comment 2 Ivan Timofeev (retired) 2013-11-08 08:57:52 UTC
So the problem is that Basic IDE prints "!!br0ken!!" instead of code.
Comment 3 Commit Notification 2013-11-08 09:16:54 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=560b27613679d2a3b3ddb89c2afe481bcf2996e3

fdo#71306: fix printing from basic ide



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-11-08 14:47:02 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=abd333fc9ace9e559eef2c5dcb851ef9dceac553&h=libreoffice-4-1

fdo#71306: fix [Page: N] info in headers of pages printed from basic ide


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-11-08 14:59:03 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=028b550cce4b08b33c9970baf785b6e1bedb4da2&h=libreoffice-4-1

fdo#71306: fix printing from basic ide


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Andras Timar 2013-11-13 12:18:12 UTC
*** Bug 68522 has been marked as a duplicate of this bug. ***