fdo#71306: fix printing from basic ide

regression from e13a3d566ecc34a46e037aca1b2d70e58501e422

Change-Id: I0d734e112038746aa48df669d4b82b644a95c220